--- a/project_news/templates/post.html
+++ b/project_news/templates/post.html
@@ -8,5 +8,7 @@ Post
 
 <!-- В контенте на странице мы выводим сам товар, идентификатор которого был передан в url -->
 {% block content %}
-<h1>{{ post }}</h1>
+<h3>{{ post.title }}</h3>
+<h3>{{ post.dateCreation|date:'d M Y' }}</h3>
+<h3>{{ post.text }}</h3>
 {% endblock content %}
