--- a/project_news/templates/news_search.html
+++ b/project_news/templates/news_search.html
@@ -1,34 +1,42 @@
-{% extends 'flatpages/default.html' %}
+{% extends "flatpages/default.html" %}
 
-{% load censorship_filters %}
- 
-<!-- Название у нас будет products -->
+{% load custom_filters %}
+
+{% load custom_tags %}
+
 {% block title %}
-Posts
+Search
 {% endblock title %}
- 
+
 {% block content %}
-   <h1>Все статьи: {{ posts|length }} </h1>
-   <hr>
-   {% if posts %}
+    <h1>Поиск новости</h1>
+    <hr>
+     <form action="" method="get">
+        {{ filterset.form.as_p }}
+        <input type="submit" value="Найти" />
+    </form>
+
+   {% if news_search %}
        <table>
            <tr>
                <td>Заголовок</td>
                <td>Дата публикации</td>
                <td>Текст</td>
            </tr>
-           {% for post in posts %}
-           <tr>
-               <td>{{ post.title|censor }}</td>
-               <td>{{ post.dateCreation|date:'d M Y' }}</td>
-               <td>{{ post.text|truncatechars:20|censor }}</td>
-           </tr>
+
+           {% for post in post_search %}
+            <tr>
+                <td>{{ post.title|censor }}</td>
+                <td>{{ post.dateCreation|date:'d M Y' }}</td>
+                <td>{{ post.text|censor }}</td>
+            </tr>
            {% endfor %}
 
        </table>
    {% else %}
        <h2>Новостей нет!</h2>
    {% endif %}
+
 
 
    {% if page_obj.has_previous %}
@@ -38,11 +46,7 @@ Posts
            <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
        {% endif %}
    {% endif %}
-
-   {# Информация о текущей странице #}
    {{ page_obj.number }}
-
-   {# Информация о следующих страницах #}
    {% if page_obj.has_next %}
        <a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
        {% if paginator.num_pages != page_obj.next_page_number %}
