--- a/project_news/templates/post.html
+++ b/project_news/templates/post.html
@@ -1,6 +1,8 @@
 <!--  наследуемся от шаблона default.html, который мы создавали для flatpages -->
 {% extends 'flatpages/default.html' %}
 
+{% load censorship_filters %}
+
 <!-- Название у нас будет Product -->
 {% block title %}
 Post
@@ -8,7 +10,7 @@ Post
 
 <!-- В контенте на странице мы выводим сам товар, идентификатор которого был передан в url -->
 {% block content %}
-<h3>{{ post.title }}</h3>
+<h3>{{ post.title|censor }}</h3>
 <h3>{{ post.dateCreation|date:'d M Y' }}</h3>
-<h3>{{ post.text }}</h3>
+<h3>{{ post.text|censor }}</h3>
 {% endblock content %}
