--- a/project_news/templates/category_list.html
+++ b/project_news/templates/category_list.html
@@ -3,15 +3,16 @@
 {% load censorship_filters %}
 
 {% load custom_tags %}
- 
+
 <!-- Название у нас будет products -->
 {% block title %}
 Posts
 {% endblock title %}
- 
+
 {% block content %}
    <h1>Все статьи: {{ posts|length }} </h1>
    <hr>
+
    {% if posts %}
        <table>
            <tr>
@@ -20,13 +21,13 @@ Posts
                <td>Текст</td>
                <td>Категория статьи</td>
            </tr>
-           {% for post in posts %}
+           {% for post in category_mews_list %}
            <tr>
                <td>{{ post.title|censor }}</td>
                <td>{{ post.dateCreation|date:'d M Y' }}</td>
                <td>{{ post.text|truncatechars:20|censor }}</td>
                <td>{% for category in post.postCategory.all %}
-                        <a href="{% url 'category_list' category.id %}">{{ category }}</a>{% if not forloop.last %}, {% endif %}
+                        <a href="{% url 'category_list' category.id %}">{{ category|censor }}</a>{% if not forloop.last %}, {% endif %}
                    {% endfor %}</td>
            </tr>
            {% endfor %}
